# ReMap

./: .replit  README.md  aux_battle.py  aux_battle_data.json  bot.py  common.py  config.py  locations.json  main.py  pyproject.toml  replit.nix  requirements.txt
cogs/: aux_battle.py  game_manager.py  help.py  location_manager.py
data/: active_games.json  games.json  locations.json
