[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "folium>=0.19.4",
    "geopy>=2.4.1",
    "gunicorn>=23.0.0",
    "playwright>=1.50.0",
    "psycopg2-binary>=2.9.10",
    "staticmap>=0.5.7",
    "trafilatura>=2.0.0",
]
